--- a/Cenario1/index.html
+++ b/Cenario1/index.html
@@ -10,6 +10,7 @@
   <div class="container">
     <h1>Aqui você encontra os melhores FILMESS!!!</h1>
     <p>Quem é netflix ou Prime Video perto do Facom Filmes</p>
+    <button id="botao">Carregar Filmes</button>
   </div>
   
   <script src="script.js"></script>
